--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ button {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+  cursor: pointer;
 }
 
 .first-section,
@@ -242,6 +243,7 @@ footer {
 .pf-button-menu {
   list-style: none;
   text-align: center;
+  cursor: pointer;
 }
 
 .pf-button-menu li {
